<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:onClick="dvadsat"
            android:text="@string/_20_edged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button9"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="144dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="65dp" android:layout_marginRight="65dp"/>
    <Button
            android:onClick="dvanast"
            android:text="@string/_12_edged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="74dp" android:layout_marginStart="74dp" android:layout_marginBottom="144dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/button9"
            android:layout_marginEnd="96dp" android:layout_marginRight="96dp"/>
    <Button
            android:onClick="desat"
            android:text="@string/_10_edged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button7"
            android:layout_marginEnd="65dp" android:layout_marginRight="65dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="83dp"
            app:layout_constraintTop_toBottomOf="@+id/button5" android:layout_marginBottom="86dp"
            app:layout_constraintBottom_toTopOf="@+id/button9"/>
    <Button
            android:onClick="osem"
            android:text="@string/_8_edged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button6"
            android:layout_marginTop="83dp"
            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="74dp" android:layout_marginStart="74dp" android:layout_marginBottom="86dp"
            app:layout_constraintBottom_toTopOf="@+id/button8" app:layout_constraintEnd_toStartOf="@+id/button7"
            android:layout_marginEnd="96dp" android:layout_marginRight="96dp"/>
    <TextView
            android:text="@string/choose_your_cube"
            android:layout_width="281dp"
            android:layout_height="51dp" android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"/>
    <Button
            android:onClick="stiry"
            android:text="@string/_4_edged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="74dp"
            android:layout_marginStart="74dp" app:layout_constraintEnd_toStartOf="@+id/button5"
            android:layout_marginEnd="96dp" android:layout_marginRight="96dp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:onClick="sest"
            android:text="@string/_6_edged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button5"
            android:layout_marginEnd="65dp" android:layout_marginRight="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
</androidx.constraintlayout.widget.ConstraintLayout>