<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

    <Button
            android:onClick="rules"
            android:text="@string/game_rules"
            android:layout_width="271dp"
            android:layout_height="84dp" android:id="@+id/button3"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/button2"
    />
    <Button
            android:onClick="play"
            android:text="@string/play"
            android:layout_width="186dp"
            android:layout_height="91dp" android:id="@+id/button"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="85dp" android:layout_marginRight="85dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.546"/>
    <Button
            android:onClick="roll"
            android:text="@string/roll_the_dice"
            android:layout_width="313dp"
            android:layout_height="86dp" android:id="@+id/button2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginTop="15dp"
    />
    <ImageView
            android:layout_width="555dp"
            android:layout_height="337dp" app:srcCompat="@mipmap/kerm" android:id="@+id/imageView2"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>